# automaticGTD

./: .gitignore  README.md  pyproject.toml
core/: inbox_text.py
dependencies/: singleton.py
doc/: decisionesDesarrollo.md  goals.md  quality attrs.md  requirements.adoc  requirements.md  technicalAnalysis.md  technologies.md  userHistories.md
doc/diagrams/: components.html  containers.html  context.html
doc/diagrams/components/: 1.html  6.html  mermaidcode
documentation/: arc42-template.adoc  index.adoc
documentation/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc  config.adoc
features/: Inbox.feature
features/steps/: stepImpInbox.py
reports/: 0f26945c-205c-45f8-94ae-9e6f8f5ca29f-result.json  15eaf9d7-9e3d-48f9-9857-0f8addb3e871-result.json  3a99ec2c-8f38-408a-bc79-b7f583710f2f-result.json  3cf4f57f-dc3a-4183-8c65-2a3aa8cdbe1a-result.json  4956fe74-233c-4a6b-a72e-ffc92a3bf285-result.json  4bb9219b-41b0-4309-9505-a97889543f2f-result.json  5b6b1bc0-3163-4086-8ada-e6033f8ceeb9-result.json  67e0c4fc-fbb3-4bb7-8beb-58b6d6013ad0-result.json  8b499fdd-3219-4a45-91a4-61463b33806a-result.json  9e6ec82e-e49d-45b0-a0ff-4d1b9cf72e92-result.json  a74209fc-b851-42cb-be49-e31819edd833-result.json  f11990ec-9d65-430c-b4f9-afa62d60c0bf-result.json  f4db461f-b084-42b5-a67d-b30daf093db6-result.json
server/: procesator.py
server/inbox/: inboxmodule.py
server/router/: router.py
tests/: inbox_test.py  test_inbox.py  test_pytestlib.py
