[tool.poetry]
name = "automaticgtd"
version = "0.1.0"
description = ""
authors = ["Jose Simon Pepe"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
poethepoet = "^0.18.1"
allure-pytest = "^2.13.0"
allure-behave = "^2.13.1"
pytest = "7.2.2"

[tool.poe.tasks]
bdd   = "behave"                                # simple command based task
test  = "pytest --verbose"

bdd_report = "behave -f allure_behave.formatter:AllureFormatter -o reports ./features"
report="allure serve reports"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
